@@ -1,64 +1,55 @@
 package com.cloudkitchen.service;
 
+import com.cloudkitchen.model.MenuItem;
 import com.cloudkitchen.model.Order;
 import com.cloudkitchen.model.Order.OrderStatus;
+import com.cloudkitchen.model.Order.OrderType;
 import com.cloudkitchen.model.OrderItem;
-import com.cloudkitchen.model.MenuItem;
-import com.cloudkitchen.repository.OrderRepository;
-import com.cloudkitchen.repository.OrderItemRepository;
 import com.cloudkitchen.repository.MenuItemRepository;
+import com.cloudkitchen.repository.OrderItemRepository;
+import com.cloudkitchen.repository.OrderRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
-import java.time.LocalDate;
-import java.util.List;
-import java.util.Map;
-import java.util.HashMap;
-import java.util.Arrays;
-import java.util.ArrayList;
 import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.Duration;
+import java.util.*;
 
 @Service
 public class OrderService {
 
-    @Autowired
-    private OrderRepository orderRepository;
+    @Autowired private OrderRepository orderRepository;
+    @Autowired private MenuItemRepository menuItemRepository;
+    @Autowired private OrderItemRepository orderItemRepository;
 
-    @Autowired
-    private MenuItemRepository menuItemRepository;
-
-    @Autowired
-    private OrderItemRepository orderItemRepository;
-
-    @Autowired
-    private MenuItemService menuItemService;
-
-
-    // ✅ Add this missing method
+    // List active (non‑completed / non‑cancelled) orders
     public List<Order> listActiveOrders() {
-        List<OrderStatus> activeStatuses = Arrays.asList(OrderStatus.PENDING, OrderStatus.PREPARING, OrderStatus.READY);
-        return orderRepository.findByStatusInOrderByOrderTimeAsc(activeStatuses);
+        return orderRepository.findByStatusInOrderByOrderTimeAsc(
+                List.of(OrderStatus.PENDING, OrderStatus.PREPARING, OrderStatus.READY));
     }
 
-    // ✅ Add this missing method
     public List<Order> listAll() {
         return orderRepository.findAll();
     }
 
     public Order createOrder(Order order) {
         if (order.getOrderId() == null) {
-            order.setOrderId("ORD-" + System.currentTimeMillis());
+            order.setOrderId(generateOrderCode());
         }
         return orderRepository.save(order);
     }
 
     public Order getOrderById(Long id) {
-        return orderRepository.findById(id).orElseThrow(() -> new RuntimeException("Order not found"));
+        return orderRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Order not found"));
     }
 
     public Order getOrderByOrderId(String orderId) {
-        return orderRepository.findByOrderId(orderId).orElseThrow(() -> new RuntimeException("Order not found"));
+        return orderRepository.findByOrderId(orderId)
+                .orElseThrow(() -> new RuntimeException("Order not found"));
     }
 
     public List<Order> getAllOrders() {
@@ -70,43 +61,50 @@ public class OrderService {
     }
 
     public List<Order> getActiveOrders() {
-        List<OrderStatus> activeStatuses = Arrays.asList(OrderStatus.PENDING, OrderStatus.PREPARING, OrderStatus.READY);
-        return orderRepository.findByStatusInOrderByOrderTimeAsc(activeStatuses);
+        return listActiveOrders();
     }
 
     public List<Order> getTodaysOrders() {
-        LocalDateTime startOfDay = LocalDate.now().atStartOfDay();
-        LocalDateTime endOfDay = startOfDay.plusDays(1);
-        return orderRepository.findByOrderTimeBetweenOrderByOrderTimeDesc(startOfDay, endOfDay);
+        LocalDateTime start = LocalDate.now().atStartOfDay();
+        LocalDateTime end = start.plusDays(1);
+        return orderRepository.findByOrderTimeBetweenOrderByOrderTimeDesc(start, end);
     }
 
     public List<Order> getOrdersByCustomerPhone(String phone) {
         return orderRepository.findByCustomerPhoneOrderByOrderTimeDesc(phone);
     }
 
-    public Order updateOrder(Long id, Order orderDetails) {
-        Order order = orderRepository.findById(id).orElseThrow(() -> new RuntimeException("Order not found"));
-        order.setCustomerName(orderDetails.getCustomerName());
-        order.setCustomerPhone(orderDetails.getCustomerPhone());
-        order.setCustomerEmail(orderDetails.getCustomerEmail());
-        order.setStatus(orderDetails.getStatus());
-        order.setOrderType(orderDetails.getOrderType());
-        order.setTotalAmount(orderDetails.getTotalAmount());
-        order.setSpecialInstructions(orderDetails.getSpecialInstructions());
-        order.setDeliveryAddress(orderDetails.getDeliveryAddress());
-        order.setPriority(orderDetails.getPriority());
-        return orderRepository.save(order);
+    public List<Order> getOrdersByCustomerEmail(String email) {
+        return orderRepository.findByCustomerEmailOrderByOrderTimeDesc(email);
     }
 
-    public Order updateOrderStatus(Long id, OrderStatus newStatus) {
-        Order order = orderRepository.findById(id).orElseThrow(() -> new RuntimeException("Order not found"));
-        order.setStatus(newStatus);
-        
-        if (newStatus == OrderStatus.COMPLETED) {
-            order.setActualCompletionTime(LocalDateTime.now());
+    // Update editable fields that actually exist
+    public Order updateOrder(Long id, Order details) {
+        Order o = getOrderById(id);
+        o.setCustomerName(details.getCustomerName());
+        o.setCustomerPhone(details.getCustomerPhone());
+        o.setCustomerEmail(details.getCustomerEmail());
+        o.setStatus(details.getStatus());
+        o.setOrderType(details.getOrderType());
+        o.setTotalAmount(details.getTotalAmount());
+        o.setPriority(details.getPriority());
+        o.setUpdatedAt(LocalDateTime.now());
+        return orderRepository.save(o);
+    }
+
+    public Order updateStatus(Long id, OrderStatus status) {
+        Order o = getOrderById(id);
+        OrderStatus prev = o.getStatus();
+        o.setStatus(status);
+        o.setUpdatedAt(LocalDateTime.now());
+
+        if (status == OrderStatus.READY && prev != OrderStatus.READY) {
+            o.setReadyTime(LocalDateTime.now());
         }
-        
-        return orderRepository.save(order);
+        if (status == OrderStatus.COMPLETED) {
+            // nothing special stored (no actualCompletionTime field) – updatedAt already set
+        }
+        return orderRepository.save(o);
     }
 
     public void deleteOrder(Long id) {
@@ -114,118 +112,97 @@ public class OrderService {
     }
 
     public Map<String, Long> getOrderCountsByStatus() {
-        Map<String, Long> counts = new HashMap<>();
-        for (OrderStatus status : OrderStatus.values()) {
-            counts.put(status.name(), orderRepository.countByStatus(status));
+        Map<String, Long> map = new HashMap<>();
+        for (OrderStatus s : OrderStatus.values()) {
+            map.put(s.name(), orderRepository.countByStatus(s));
         }
-        return counts;
+        return map;
     }
 
     public Double getRevenue(String startDate, String endDate) {
+        // Simple: use today's orders; adapt if you add date filtering later
         return getTodaysOrders().stream()
-                .filter(order -> order.getStatus() == OrderStatus.COMPLETED)
-                .mapToDouble(order -> order.getTotalAmount().doubleValue())
+                .filter(o -> o.getStatus() == OrderStatus.COMPLETED)
+                .mapToDouble(o -> o.getTotalAmount().doubleValue())
                 .sum();
     }
 
     public Map<String, Object> getOrderSummary(String startDate, String endDate) {
-        Map<String, Object> summary = new HashMap<>();
-        List<Order> orders = getTodaysOrders();
-        
-        summary.put("totalOrders", orders.size());
-        summary.put("completedOrders", orders.stream().filter(o -> o.getStatus() == OrderStatus.COMPLETED).count());
-        summary.put("pendingOrders", orders.stream().filter(o -> o.getStatus() == OrderStatus.PENDING).count());
+        List<Order> todays = getTodaysOrders();
+        Map<String,Object> summary = new HashMap<>();
+        summary.put("totalOrders", todays.size());
+        summary.put("completedOrders", todays.stream().filter(o -> o.getStatus() == OrderStatus.COMPLETED).count());
+        summary.put("pendingOrders", todays.stream().filter(o -> o.getStatus() == OrderStatus.PENDING).count());
         summary.put("totalRevenue", getRevenue(startDate, endDate));
-        
         return summary;
     }
 
     public Double getAverageCompletionTime() {
-        List<Order> completedOrders = getOrdersByStatus(OrderStatus.COMPLETED);
-        if (completedOrders.isEmpty()) {
-            return 0.0;
-        }
-        
-        return completedOrders.stream()
-                .filter(order -> order.getActualCompletionTime() != null)
-                .mapToLong(order -> java.time.Duration.between(order.getOrderTime(), order.getActualCompletionTime()).toMinutes())
+        List<Order> completed = getOrdersByStatus(OrderStatus.COMPLETED);
+        if (completed.isEmpty()) return 0.0;
+
+        return completed.stream()
+                .map(o -> {
+                    LocalDateTime end = (o.getReadyTime() != null) ? o.getReadyTime() : o.getUpdatedAt();
+                    return end != null ? Duration.between(o.getOrderTime(), end).toMinutes() : 0;
+                })
+                .mapToLong(Long::longValue)
                 .average()
                 .orElse(0.0);
     }
 
-    public Order createOrderFromPayload(List<Map<String,Object>> items, String customerName, String customerPhone, String orderType) {
+    @Transactional
+    public Order createOrderFromPayload(List<Map<String,Object>> itemsPayload,
+                                        String customerName,
+                                        String customerPhone,
+                                        String customerEmail,
+                                        String orderTypeStr) {
+        if (itemsPayload == null || itemsPayload.isEmpty())
+            throw new IllegalArgumentException("No items provided");
+
+        OrderType orderType;
+        try {
+            orderType = OrderType.valueOf(orderTypeStr);
+        } catch (Exception ex) {
+            throw new IllegalArgumentException("Invalid orderType: " + orderTypeStr);
+        }
+
         Order order = new Order();
-        
-        order.setOrderId(generateOrderId());
+        order.setOrderId(generateOrderCode());
         order.setCustomerName(customerName);
         order.setCustomerPhone(customerPhone);
-        
-        if (orderType != null) {
-            try {
-                order.setOrderType(Order.OrderType.valueOf(orderType.toUpperCase()));
-            } catch (IllegalArgumentException e) {
-                order.setOrderType(Order.OrderType.PICKUP);
-            }
-        } else {
-            order.setOrderType(Order.OrderType.PICKUP);
-        }
-        
-        // ✅ Set initial status to PENDING (this will show in "Received" column)
-        order.setStatus(Order.OrderStatus.PENDING);
-        order.setPriority(Order.Priority.NORMAL);
-        order.setOrderTime(LocalDateTime.now());
+        order.setCustomerEmail(customerEmail);
+        order.setOrderType(orderType);
+        order.setStatus(OrderStatus.PENDING);
         order.setCreatedAt(LocalDateTime.now());
+        order.setOrderTime(LocalDateTime.now());
         order.setUpdatedAt(LocalDateTime.now());
-        
-        // Calculate total amount first
-        BigDecimal totalAmount = BigDecimal.ZERO;
-        List<OrderItem> orderItems = new ArrayList<>();
 
-        for (Map<String,Object> itemData : items) {
-            Integer menuItemId = (Integer) itemData.get("menuItemId");
-            Integer quantity = (Integer) itemData.get("quantity");
-            
-            MenuItem menuItem = menuItemService.findById(menuItemId.longValue());
-            
-            BigDecimal itemTotal = menuItem.getPrice().multiply(BigDecimal.valueOf(quantity));
-            totalAmount = totalAmount.add(itemTotal);
-            
-            OrderItem orderItem = new OrderItem();
-            orderItem.setMenuItem(menuItem);
-            orderItem.setQuantity(quantity);
-            orderItem.setUnitPrice(menuItem.getPrice());
-            orderItem.setTotalPrice(itemTotal);
-            orderItem.setStatus(OrderItem.ItemStatus.PENDING);
-            
-            orderItems.add(orderItem);
-        }
-        
-        order.setTotalAmount(totalAmount);
-        Order savedOrder = orderRepository.save(order);
-        
-        for (OrderItem orderItem : orderItems) {
-            orderItem.setOrder(savedOrder);
-        }
-        orderItemRepository.saveAll(orderItems);
-        
-        savedOrder.setItems(orderItems);
-        return savedOrder;
-    }
+        BigDecimal total = BigDecimal.ZERO;
 
-    private String generateOrderId() {
-        return "ORD-" + System.currentTimeMillis();
-    }
+        for (Map<String,Object> raw : itemsPayload) {
+            Long menuItemId = ((Number) raw.get("menuItemId")).longValue();
+            Integer qty = ((Number) raw.get("quantity")).intValue();
+            if (qty == null || qty <= 0) throw new IllegalArgumentException("Quantity must be > 0");
 
-    public Order updateStatus(Long id, OrderStatus status) {
-        Order order = orderRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("Order not found"));
-        order.setStatus(status);
-        order.setUpdatedAt(LocalDateTime.now());
-        
-        if (status == OrderStatus.COMPLETED) {
-            order.setActualCompletionTime(LocalDateTime.now());
+            MenuItem mi = menuItemRepository.findById(menuItemId)
+                    .orElseThrow(() -> new IllegalArgumentException("MenuItem not found id=" + menuItemId));
+
+            OrderItem oi = new OrderItem();
+            oi.setMenuItem(mi);
+            oi.setQuantity(qty);
+            oi.setUnitPrice(mi.getPrice());
+            oi.setStatus(OrderItem.ItemStatus.PENDING);
+
+            order.addItem(oi);
+            total = total.add(mi.getPrice().multiply(BigDecimal.valueOf(qty)));
         }
-        
+
+        order.setTotalAmount(total);
         return orderRepository.save(order);
+    }
+
+    private String generateOrderCode() {
+        return "O" + (System.currentTimeMillis() % 1_000_000);
     }
 }
